# PROGG-6

./: README.md
Programming-Project/Programming-Project--main/: ME.md  README.md
Programming-Project/Programming-Project--main/backend/: README.md  main.py  pyproject.toml
Programming-Project/Programming-Project--main/backend/app/: __init__.py  main.py  schemas.py  state.py
Programming-Project/Programming-Project--main/backend/app/routers/: __init__.py  model.py  predict.py
Programming-Project/Programming-Project--main/backend/tests/: __init__.py  test_api.py
Тарасова ДЮ, ПРОГ-6, ЛР - 1/: README.md
Тарасова ДЮ, ПРОГ-6, ЛР - 1, Эксп. гр/: app_aiohttp.py  app_flask.py  app_sanic.py  locustfile.py  plot_results.py  report.md  requirements.txt  run_tests.ps1
Тарасова ДЮ, ПРОГ-6, ЛР - 2, Эксп. гр/: app.py
Тарасова ДЮ, ПРОГ-6, ЛР - 2, Эксп. гр/templates/: README.md  index.html
Тарасова ДЮ, ПРОГ-6, ЛР - 3, Эксп. гр/: Тарасова ДЮ, ЛР-3.docx
Тарасова ДЮ, ПРОГ-6, ЛР-2/: README.md  benchmark.py  integration.py  integration_cython.pyx  integration_processes.py  integration_threads.py  iteration1_integrate.py  iteration2_threads.py  iteration3_processes.py  setup.py
Тарасова ДЮ, ПРОГ-6, ЛР-2/iteration4_cython/: integrate_cy.c  integrate_cy.cp313-win_amd64.pyd  integrate_cy.html  integrate_cy.pyx  run_benchmark.py  setup.py
Тарасова ДЮ, ПРОГ-6, ЛР-2/iteration5_nogil/: integrate_nogil.c  integrate_nogil.cp313-win_amd64.pyd  integrate_nogil.html  integrate_nogil.pyx  run_benchmark.py  setup.py
Тарасова ДЮ, ПРОГ-6, ЛР-3, frontend/: index.html  script.js  style.css
(+51 files in other folders)
